Prevent horizontal scrolling and small updates

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -9,6 +9,7 @@ body {
     height: 100%;
     color: #555;
     font-family: 'Raleway', sans-serif;
+    overflow-x: hidden;
 }
 
 /* Main */
